--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>HajjRahh Global</title>
-    <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+    <title>HajjRahh Agencies</title>
+    <!-- <link rel="stylesheet" href="./assets/css/owl.carousel.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">    
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
@@ -43,28 +43,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="./assets/js/jquery.min.js"></script>
-    <script src="./assets/js/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-      $(document).ready(function(){
-      $('.owl-carousel').owlCarousel({
-          loop:true,
-          margin:10,
-          nav:true,
-          items:6,
-          responsive:{
-              0:{
-                  items:3
-              },
-              600:{
-                  items:4
-              },
-              1000:{
-                  items:6.5
-              }
-          }
-      })
-    });
-  </script>
+    
+    
   </body>
 </html>
